# BDSIM

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  bdsim.cc
.github/docker/: dockerfile
.github/workflows/: buildmanual.yaml  buildtest.yaml  distribute.yml
building/conda/bdsim/: bdsim-setup  build_bdsim.sh  meta.yaml
cmake/: CGALBOOLEAN.cmake
cmake/Modules/: bdsim_install.cmake  bdsim_macros.cmake
examples/features/fields/acceleration/: axialstandingapprox.gmad  axialstandingapprox_full.gmad  axialstandingapprox_full_multiple.gmad
examples/features/fields/code_field/: testClass.cc  testClass.hh  testFunction.cc
examples/features/fields/waveguide/: Analysis.ipynb  axialstandingapprox.gmad  axialstandingapprox_full.gmad  axialstandingapprox_full_multiple.gmad  tm_010_standing_002mev.gmad  tm_010_standing_004mev.gmad  tm_010_standing_006mev.gmad  tm_010_standing_008mev.gmad  tm_010_standing_010mev.gmad  tm_010_standing_050mev.gmad  tm_010_standing_150mev.gmad  tm_010_standing_200mev.gmad  tm_011_standing.gmad  tm_011_standing_0.05m_100mev.gmad  tm_011_standing_0.05m_10mev.gmad  tm_011_standing_0.05m_300mev.gmad  tm_011_standing_002mev.gmad  tm_011_standing_004mev.gmad  tm_011_standing_006mev.gmad  tm_011_standing_008mev.gmad  tm_011_standing_010mev.gmad  tm_011_standing_020mev.gmad  tm_011_standing_030mev.gmad  tm_011_standing_040mev.gmad  tm_011_standing_050mev.gmad  tm_011_standing_100mev.gmad  tm_011_standing_150mev.gmad  tm_011_standing_200mev.gmad  tm_011_standing_250mev.gmad  tm_011_standing_300mev.gmad
examples/features/io/: CMakeLists.txt
include/: BDSCavityFieldType.hh  BDSFieldEMAcceleration.hh  BDSFieldEMAxialElectric.hh  BDSFieldEMAxialStandingApprox.hh  BDSFieldEMAxlalFloquetApprox.hh  BDSFieldEMCircularTM.hh  BDSFieldType.hh  BDSGDMLPreprocessor.hh  BDSGlobalConstants.hh  BDSIMClass.hh  BDSIntegratorSet.hh  BDSOutput.hh  BDSParser.hh  BDSROOTCompiledClass.hh  BDSROOTCompiledClassBase.hh  BDSROOTCompiledFunction.hh  BDSROOTCompiledFunctionBase.hh  G4BooleanProcessorCGAL.hh  G4SurfaceMeshCGAL.hh  G4VSurfaceMesh.hh
manual/source/: dev_buildsystem.rst  dev_testing.rst  index.rst  installation.rst  licence.rst.in  model_control.rst  model_conversion.rst  model_customisation.rst  python_utilities.rst  support.rst  version_history.rst
manual/source/figures/aperture/: bdsim-aperture-shapes.pptx
parser/: element.h  field.h  gmad.cc  material.cc  material.h  modulator.h  newcolour.h  options.cc  options.h  optionsBase.cc  optionsBase.h  parameters.h  parser.cc  parser.h  parserROOT.cc  query.h  region.h  samplerplacement.h  scorer.h  scorermesh.h  tunnel.h
python/: BDSExecOptionsPybind.cc  BDSIMClassPybind.cc  BDSParserPybind.cc  CMakeLists.txt  __init__.py  aperturePybind.cc  arrayPybind.cc  atomPybind.cc  bdsimclassPybind.cc  bdsoutputrooteventsamplerPybind.cc  bdsparserPybind.cc  beamPybind.cc  blmplacementPybind.cc  cavitymodelPybind.cc  crystalPybind.cc  elementPybind.cc  elementtypePybind.cc  fastlistPybind.cc  fieldPybind.cc  materialPybind.cc  modulatorPybind.cc  newcolourPybind.cc  optionsPybind.cc  parametersPybind.cc  parserPybind.cc  physicsbiasingPybind.cc  placementPybind.cc  queryPybind.cc  regionPybind.cc  samplerplacementPybind.cc  scorerPybind.cc  scorermeshPybind.cc  sym_tablePybind.cc  tunnelPybind.cc
regression/components/: 1_drift.gmad  1_drift_rebdsim.txt  electron_beam.gmad  options_test.gmad
src/: BDSBeamlineIntegral.cc  BDSCavityFieldType.cc  BDSColourFromMaterial.cc  BDSComponentFactory.cc  BDSFieldClassType.cc  BDSFieldEMAcceleration.cc  BDSFieldEMAxialElectric.cc  BDSFieldEMAxialFloquetApprox.cc  BDSFieldEMAxialStandingApprox.cc  BDSFieldEMCircularTM.cc  BDSFieldEMRFCavity.cc  BDSFieldFactory.cc  BDSFieldType.cc  BDSGDMLPreprocessor.cc  BDSIMClass.cc  BDSIntegratorSet.cc  BDSMagnetStrength.cc  BDSOutput.cc  BDSOutputROOT.cc  BDSParser.cc  BDSROOTCompiledClass.cc  BDSROOTCompiledFunction.cc  G4BooleanProcessorCGAL.cc  G4SurfaceMeshCGAL.cc  G4VSurfaceMesh.cc
